# authenticated-tasks-rest-api

./: .env  .gitignore  README.md  pyproject.toml
alembic/: env.py
alembic/versions/: 2f4f5e6b8b72_create_initial_tables.py  58913339ef0a_create_initial_tables.py
api/: main.py
api/auth/: security.py
api/core/: config.py
api/database/: session.py
api/dependencies/: auth.py  database.py
api/exceptions/: auth.py  task.py  user.py
api/models/: __init__.py  task.py  user.py
api/routers/: task.py  user.py
api/schemas/: task.py  token.py  user.py
api/services/: task.py  user.py
